<resources>
    <string name="app_name">Calories</string>
    <string name="home">Calories</string>
    <string name="eaten_num">0</string>
    <string name="eaten_text">eaten</string>
    <string name="burned_num">0</string>
    <string name="burned_text">steps</string>
    <string name="calleft_num">0</string>
    <string name="calleft_text">kcal left</string>
    <string name="meals_head">Meals</string>
    <string name="date">date</string>
    <string name="addmeal_head">Add Meal</string>
    <string name="foodname">Food Name</string>
    <string name="calories">Calories</string>
    <string name="foodname_input">Sample Food Name</string>
    <string name="calories_input">100</string>
    <string name="kcal">kcal</string>
    <string name="image">Image</string>
    <string name="choose_img">Choose Image</string>
    <string name="save">Save</string>
    <string name="user_head">User</string>
    <string name="biosex">Biological Sex</string>
    <string name="age">Age</string>
    <string name="weight">Weight (kg)</string>
    <string name="height">Height (cm)</string>
    <string name="bmr">BMR</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="bmr_output"></string>
    <string name="edit">Edit</string>
</resources>
