<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#FFFDF3"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/backuser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@android:color/transparent"
            android:foregroundGravity="left"
            app:srcCompat="@drawable/back" />

        <TextView
            android:id="@+id/user_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_weight="1"
            android:fontFamily="@font/sulphur_point_bold"
            android:text="@string/user_head"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="275dp"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/sulphur_point_bold"
                android:text="@string/biosex"
                android:textColor="#9FBB73"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/sulphur_point_bold"
                android:text="@string/age"
                android:textColor="#9FBB73"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/sulphur_point_bold"
                android:text="@string/weight"
                android:textColor="#9FBB73"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/sulphur_point_bold"
                android:text="@string/height"
                android:textColor="#9FBB73"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/sulphur_point_bold"
                android:text="@string/bmr"
                android:textColor="#9FBB73"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/rdGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/checkMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:fontFamily="@font/sulphur_point"
                        android:text="@string/male"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/checkFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:fontFamily="@font/sulphur_point"
                        android:text="@string/female"
                        android:textSize="14sp" />
                </RadioGroup>

            </LinearLayout>

            <EditText
                android:id="@+id/age"
                android:layout_width="155dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/text_border"
                android:fontFamily="@font/sulphur_point"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/weight"
                android:layout_width="155dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/text_border"
                android:ems="10"
                android:fontFamily="@font/sulphur_point"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/height"
                android:layout_width="155dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/text_border"
                android:ems="10"
                android:fontFamily="@font/sulphur_point"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/bmr"
                android:layout_width="155dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/sulphur_point"
                android:gravity="center"
                android:text="@string/bmr_output"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck"/>


        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/saveUser"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#E1ECC8"
        android:fontFamily="@font/sulphur_point_bold"
        android:text="@string/save"
        android:textColor="#000000"
        android:textSize="18sp" />
</LinearLayout>