<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFDF3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/backaddmeal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@android:color/transparent"
            android:foregroundGravity="left"
            app:srcCompat="@drawable/back" />

        <TextView
            android:id="@+id/user_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_weight="1"
            android:fontFamily="@font/sulphur_point_bold"
            android:text="@string/addmeal_head"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="@font/sulphur_point_bold"
                android:text="@string/foodname"
                android:textColor="#9FBB73"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="@font/sulphur_point_bold"
                android:text="@string/calories"
                android:textColor="#9FBB73"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/foodname_input"
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/text_border"
                android:fontFamily="@font/sulphur_point"
                android:gravity="center"
                android:inputType="text" />

            <EditText
                android:id="@+id/calories_input"
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/text_border"
                android:ems="10"
                android:fontFamily="@font/sulphur_point"
                android:gravity="center"
                android:inputType="numberDecimal" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/savemealbtn"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#E1ECC8"
        android:fontFamily="@font/sulphur_point_bold"
        android:text="@string/save"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/edit"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#E1ECC8"
        android:fontFamily="@font/sulphur_point_bold"
        android:text="@string/edit"
        android:textColor="#000000"
        android:textSize="18sp" />
</LinearLayout>