<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="30dp"
    android:layout_marginTop="25dp"
    android:layout_marginEnd="30dp"
    app:cardBackgroundColor="#E1ECC8"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/flowmenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/option" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/foodname_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sulphur_point"
                android:text="@string/foodname_input"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/calories_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/sulphur_point"
                android:gravity="end"
                android:text="@string/calories_input"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/kcal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/sulphur_point"
                android:gravity="end"
                android:text="@string/kcal"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
